# exasol-json-tables

./: .gitignore  CHANGELOG.md  README.md  json-query-expressiveness-proposal.md  pyproject.toml
crates/json_tables_ingest/: Cargo.toml  README.md
crates/json_tables_ingest/src/: lib.rs  main.rs  tests.rs
crates/json_tables_ingest/tests/fixtures/: arrays.json  edge_cases.json  hetero_arrays.json  nested.json  orders.json  sample.json  sample.ndjson
docs/: architecture.md  automation.md  developer-guide.md  identifier-conventions.md  ingest.md  installation.md  python-dataframes.md  query-surface.md  structured-results.md  testing.md
examples/: json_is_explicit_null_preprocessor.sql  json_path_join_preprocessor.sql  json_path_preprocessor.sql  json_wrapper_manifest.json  json_wrapper_package.json  json_wrapper_preprocessor.sql  json_wrapper_views.sql  udf_pushdown_stripping_mre.md
src/: entry.lua
tests/: _bootstrap.py  _fixture_expected_json.py  study_mongodb_migration_focus.py  study_mongodb_migration_round3.py  study_structured_result_materialization.py  study_wrapper_performance.py  test_access_modes.py  test_empty_array_export_regression.py  test_in_session_wrapper_installer.py  test_ingest_manifest_integration.py  test_json_export_helper_sql.py  test_json_export_views_sql.py  test_packaging_surface.py  test_preprocessor_early_out.py  test_preprocessor_library_builder.py  test_preprocessor_refactor_phase0.py  test_preprocessor_rewrite_hotspots.py  test_quickstart_structured_result_flow.py  test_regular_table_to_json.py  test_result_family_json_export.py  test_result_family_materializer.py  test_result_family_package_tool.py  test_structured_result_ergonomics.py  test_structured_results_from_relational.py  test_to_json_roundtrip_e2e.py  test_unified_cli.py  test_user_study_bug_regressions.py  test_wrapper_errors.py  test_wrapper_evaluation.py  test_wrapper_modeling.py  test_wrapper_package_tool.py  test_wrapper_surface.py  test_wrapper_to_json.py  test_wrapper_variant_semantics.py
tools/: _package_bootstrap.py  bundle.py  bundle_udf_pushdown_mre.py  exasol_json_tables.py  generate_json_export_helper_sql.py  generate_json_export_views_sql.py  generate_preprocessor_library_sql.py  generate_preprocessor_sql.py  generate_wrapper_preprocessor_sql.py  generate_wrapper_views_sql.py  in_session_wrapper_installer.py  nano_support.py  result_family_json_export.py  result_family_materializer.py  structured_result_tool.py  study_preprocessor_only_feasibility.py  study_preprocessor_only_performance.py  test_nano.py  (+13 more)
(+36 files in other folders)
