[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "exasol-json-tables"
version = "0.1.0"
description = "Exasol JSON Tables: ingest, query, and reshape JSON-shaped data in Exasol."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
  "pyexasol",
]

[project.scripts]
exasol-json-tables = "exasol_json_tables.cli:main"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
