[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "exasol-json-tables"
version = "0.1.0"
description = "Exasol JSON Tables: ingest, query, and reshape JSON-shaped data in Exasol."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
  "pyexasol>=2.2.0,<3",
]

[project.optional-dependencies]
dev = [
  "mypy==1.20.*",
]

[project.scripts]
exasol-json-tables = "exasol_json_tables.cli:main"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.mypy]
python_version = "3.10"
files = ["python/exasol_json_tables"]
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["exasol_json_tables.cli"]
ignore_errors = true
