[package]
name = "json_to_parquet"
version = "0.1.0"
edition = "2021"
description = "CLI tool to convert JSON input into Parquet output files."
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
parquet = "57.2"
tokio = { version = "1.37", features = ["rt-multi-thread", "sync"] }
exarrow-rs = "0.9.0"

[dev-dependencies]
arrow = "57.2"
tempfile = "3.10"
